# pos

./: LICENSE  README.md
osdev-barebone/: CMakeLists.txt  README.md  create_iso.sh  grub.cfg
osdev-barebone/src/kernel/: CMakeLists.txt  boot.s  kernel.cpp
